# gocardless-ui

./: .env.example  .gitignore  Dockerfile-backend  Dockerfile-frontend  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vite.config.ts
server/: app.py  index.js
server/config/: api.js  env.js
server/routes/: accounts.js  accounts.py  accounts_routes.py  auth.js  auth.py  auth_routes.py  institutions.js  institutions_routes.py  lunchmoney.js  lunchmoney.py  lunchmoney_routes.py  requisitions.js  requisitions.py  requisitions_routes.py  sync.py  sync_routes.py
server/services/: accounts.js  auth.js  auth.py  institutions.js  lunchmoney.js  lunchmoney.py  requisitions.js  requisitions.py  storage.js  sync_service.py
server/src/: __main__.py  app.py
server/src/services/: storage.py  (+5 more)
src/: App.tsx
src/components/: AccountCard.tsx  AccountsList.tsx  AccountsTable.tsx  AddBankDialog.tsx  BankAccountsList.tsx  ConfirmDialog.tsx  Layout.tsx  LinkedAccountsTable.tsx  LunchmoneyAccountsList.tsx  RequisitionCard.tsx  RequisitionStatus.tsx  SettingsView.tsx  SyncDashboard.tsx  SyncStatus.tsx  SyncTable.tsx
src/config/: api.ts  env.ts
src/hooks/: useInstitutionSelection.ts  useInstitutions.ts  useLunchmoneyAccounts.ts  useRequisitions.ts
src/pages/: Dashboard.tsx  Settings.tsx
src/services/: api.ts  auth.ts  lunchmoney.ts
src/store/: store.ts
src/test/: setup.ts
src/types/: gocardless.ts  lunchmoney.ts  sync.ts
sync/: pyproject.toml  sync.py
sync/templates/: index.html
tests/: test_get_transactions.py  test_sync.py  test_transform.py
(+23 files in other folders)
