[project]
name = "sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "anyio>=4.6.2.post1",
    "apscheduler>=3.10.4",
    "fastapi>=0.115.5",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.0",
    "uvicorn>=0.32.1",
]
